# Quark-Sources

./: .gitignore  releases.xml
DinguxCommander/: Makefile
DinguxCommander/src/: commander.cpp  config.h  def.h  resourceManager.cpp  screen.cpp  screen.h  sdlutils.cpp
QuarkBurner/: Dockerfile  Makefile  QuarkBurner.py
bootlogo/: Cargo.toml
bootlogo/src/: main.rs
display.elf/: Makefile  display.c
fbscreenshot/: Cargo.toml
fbscreenshot/src/: main.rs
mp3player.elf/: Makefile  mp3player.c  readme.txt
pixel-reader/: Makefile
pixel-reader/src/doc_api/: doc_reader.cpp  doc_reader.h  doc_token.cpp  doc_token.h
pixel-reader/src/filetypes/: open_doc.cpp  open_doc.h
pixel-reader/src/filetypes/epub/: epub_doc_index.cpp  epub_doc_index.h  epub_metadata.cpp  epub_reader.cpp  epub_reader.h  epub_toc_index.cpp  epub_toc_index.h  xhtml_parser.cpp  xhtml_parser.h
pixel-reader/src/filetypes/txt/: txt_reader.cpp  txt_reader.h
pixel-reader/src/reader/: config.h  font_catalog.cpp  main.cpp  progress_reporting.cpp  progress_reporting.h  settings_store.cpp  settings_store.h  ss_doc_reader_cache.cpp  ss_doc_reader_cache.h  state_store.cpp  state_store.h
pixel-reader/src/sandbox/: bulk_load_test.cpp
pixel-reader/src/sys/: keymap.h  screen.cpp
pixel-reader/src/util/: key_value_file.cpp  key_value_file.h  string_serialization.cpp  string_serialization.h
quark-hotkeyd/: Cargo.toml
quark-hotkeyd/src/: main.rs  util.rs
reboot/: Cargo.toml
reboot/src/: main.rs
sysjson-monitor/: Cargo.toml
sysjson-monitor/.cargo/: config.toml
sysjson-monitor/src/: main.rs
(+14 files in other folders)
