cargo-features = ["panic-immediate-abort"]

[package]
name = "sysjson-monitor"
version = "1.0.0"
edition = "2024"

[dependencies]
alsa = "0.10.0"
inotify = "0.11.0"
nix = { version = "0.30.1", features = ["reboot", "fs"] }

[profile.release]
opt-level = 3
codegen-units = 1
panic = "immediate-abort"
lto = true
strip = true
